creates addTask function

--- a/index.html
+++ b/index.html
@@ -14,15 +14,12 @@
   <body ng-controller="ToDoListController as toDoCtrl">
     <div>
       <form class="form-horizontal">
-        <input type="text">
-        <button class="btn">Add task</button>
+        <input type="text" ng-model="toDoCtrl.newTask">
+        <button class="btn" ng-click="toDoCtrl.addTask()">Add task</button>
       </form>
-      <ul class="task list">
-        <li class="task-list-item">
-          <a>task 1</a>
-        </li>
-        <li class="task-list-item">
-          <a>task 2</a>
+      <ul class="task list" ng-repeat="tasks in toDoCtrl.tasklist.tasks">
+        <li>
+          <a>{{tasks.task}}</a>
         </li>
       </ul>
     </div>
