--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input type="text" ng-model="toDoCtrl.newTask">
         <button class="btn" ng-click="toDoCtrl.addTask()">Add task</button>
       </form>
-      <ul class="task list" ng-repeat="tasks in toDoCtrl.tasklist.tasks">
+      <ul class="task-list" ng-repeat="tasks in toDoCtrl.taskList.tasks">
         <li>
           <a>{{tasks.task}}</a>
         </li>
