--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>SK's to-do list></title>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
+    <link href="bower_components/angular-xeditable/dist/css/xeditable.css" rel="stylesheet">
+    <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script>
     <script src="js/app.js"></script>
     <script src="js/toDoListController.js"></script>
   </head>
@@ -17,9 +20,9 @@
         <input type="text" ng-model="toDoCtrl.newTask">
         <button class="btn" ng-click="toDoCtrl.addTask()">Add task</button>
       </form>
-      <ul class="task-list" ng-repeat="tasks in toDoCtrl.taskList.tasks">
+      <ul class="task-list" ng-repeat="entry in toDoCtrl.taskList">
         <li>
-          <a>{{tasks.task}}</a>
+          <a editable-text="entry.task" buttons="no" blur="submit">{{ entry.task || "empty" }}</a>
         </li>
       </ul>
     </div>
