sets up protractor with sinatra server

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en" ng-app="ToDoList">
   <head>
     <meta charset="utf-8">
-    <title>SK's to-do list></title>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <title>SK's to-do list</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
